@@ -14,9 +14,6 @@ static ${type} (*real_${name})(${decl_args});
 /* int fork(void) */
 static int wrap_fork(void);
 static int (*real_fork)(void);
-/* int clone(int (*fn)(void *), void *child_stack, int flags, void *arg, ...) */
-static int wrap_clone(int (*fn)(void *), void *child_stack, int flags, void *arg, ...);
-static int (*real_clone)(int (*fn)(void *), void *child_stack, int flags, void *arg, ...);
 /* int execv(const char *file, char *const *argv) */
 static int wrap_execv(const char *file, char *const *argv);
 static int (*real_execv)(const char *file, char *const *argv);
