@@ -22,11 +22,6 @@ static struct {
 		(int (**)(void)) &real_fork,
 		(int (*)(void)) wrap_fork
 	},
-	{ /* int clone(int (*fn)(void *), void *, int, void, ...); */
-		"clone",
-		(int (**)(void)) &real_clone,
-		(int (*)(void)) wrap_clone
-	},
 	{ /* int execv(const char *file, char *const *argv); */
 		"execv",
 		(int (**)(void)) &real_execv,
