@@ -1,4 +1,8 @@
 2011-02-18:
+	* (seebs) disable clone for WRLINUX_NOCLONE branch because it
+	  breaks on RHEL4, but we don't want to move to the ports model yet.
+
+2011-02-18:
 	* (seebs) fix uninitialized variable
 
 2011-02-10:
